framec_tests/language_specific/csharp/v3_outline/negative/pending/missing_brace.frm
@target csharp

system S {
    actions:
        DoIt() 
}
